--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,10 +1,20 @@
 # Copyright 2020 jose
 # See LICENSE file for licensing details.
-name: charm
+name: mysql
 description: |
-  TODO: fill out the charm's description
+  MySQL is a widely used, open-source relational database management system (RDBMS).
 summary: |
-  TODO: fill out the charm's summary
-series: [kubernetes]
-
-
+  Kubernetes charm for MySQL
+series:
+  - kubernetes
+deployment:
+  type: stateful
+provides:
+  database:
+    interface: mysql
+resources:
+  mysql-image:
+    type: oci-image
+    description: upstream docker image for MySQL
+    auto-fetch: true
+    upstream-source: 'mysql:8.0.22'
